--- a/Ext.Net.Benchmarks.Classic/Views/Benchmark/Index.cshtml
+++ b/Ext.Net.Benchmarks.Classic/Views/Benchmark/Index.cshtml
@@ -8,5 +8,35 @@
     <div class="wrapper">
         <h1>Ext.NET Benchmark</h1>
     </div>
+
+    <p>
+        <ul>
+            <li>
+                See <a href="~/Benchmark/Grid">/Benchmark/Grid</a> benchmark page
+            </li>
+            <li>
+                The page accepts an optional <b>count</b> query string parameter specifying number of grids (<a href="~/Benchmark/Grid?count=3">sample</a>)
+            </li>
+            <li>
+                If an optional <b>test</b> parameter specifies a test name - the results will be saved to a file (<a href="~/Benchmark/Grid?test=benchmark1">sample</a>)
+            </li>
+        </ul>
+    </p>
+
+    <p>
+        Docker Instructions:
+
+        <ul>
+            <li>
+                CD to: <b>~\benchmarks</b>
+            </li>
+            <li>
+                Build a Docker image: <b>docker build -t extnet-benchmark-classic -f ".\Ext.Net.Benchmarks.Classic\Dockerfile" .</b>
+            </li>
+            <li>
+                Run a Docker container: <b>docker run -rm -p 5000:80 -v "d:\_results":"c:\app\results" --name ext-bench-classic extnet-benchmark-classic</b>
+            </li>
+        </ul>
+    </p>
 </body>
 </html>
