--- a/Ext.Net.Benchmarks.Legacy/Views/Benchmark/Index.cshtml
+++ b/Ext.Net.Benchmarks.Legacy/Views/Benchmark/Index.cshtml
@@ -18,7 +18,7 @@
                 The page accepts an optional <b>count</b> query string parameter specifying number of grids (<a href="~/Benchmark/Grid?count=3">sample</a>)
             </li>
             <li>
-                If an optional <b>test</b> parameter specifies a test name - the results will be saved to a file (<a href="~/Benchmark/Grid?test=benchmark1">sample</a>)
+                If an optional <b>test</b> parameter specifies a test name - the results will be saved to a file (<a href="~/Benchmark/Grid?test=benchmark">sample</a>)
             </li>
         </ul>
     </p>
