--- a/Ext.Net.Benchmarks.Classic/Views/Benchmark/Index.cshtml
+++ b/Ext.Net.Benchmarks.Classic/Views/Benchmark/Index.cshtml
@@ -34,7 +34,7 @@
                 Build a Docker image: <b>docker build -t extnet-benchmark-classic -f ".\Ext.Net.Benchmarks.Classic\Dockerfile" .</b>
             </li>
             <li>
-                Run a Docker container: <b>docker run -rm -p 5000:80 -v "d:\_results":"c:\app\results" --name ext-bench-classic extnet-benchmark-classic</b>
+                Run a Docker container: <b>docker run -p 5000:80  --cpus 4 -v "d:\_results":"c:\app\results" --name ext-bench-classic extnet-benchmark-classic</b>
             </li>
         </ul>
     </p>
