--- a/Ext.Net.Benchmarks.Classic5/Views/Benchmark/Index.cshtml
+++ b/Ext.Net.Benchmarks.Classic5/Views/Benchmark/Index.cshtml
@@ -34,7 +34,7 @@
                 Build a Docker image: <b>docker build -t extnet-benchmark-classic5 -f ".\Ext.Net.Benchmarks.Classic5\Dockerfile" .</b>
             </li>
             <li>
-                Run a Docker container: <b>docker run -rm -p 5000:80 -v "d:\_results":"c:\app\results" --name ext-bench-classic5 extnet-benchmark-classic5</b>
+                Run a Docker container: <b>docker run -p 5000:80 --cpus 4 -v "d:\_results":"c:\app\results" --name ext-bench-classic5 extnet-benchmark-classic5</b>
             </li>
         </ul>
     </p>
