--- a/Ext.Net.Benchmarks.Legacy/Views/Benchmark/Index.cshtml
+++ b/Ext.Net.Benchmarks.Legacy/Views/Benchmark/Index.cshtml
@@ -37,7 +37,7 @@
                 Build a Docker image: <b>docker build -t extnet-benchmark-legacy .</b>
             </li>
             <li>
-                Run a Docker container: <b>docker run -d -p 5000:80 -v "d:\_results":"c:\app\results" --name ext-bench-legacy extnet-benchmark-legacy</b>
+                Run a Docker container: <b>docker run -d -p 5000:80 --cpus 4 -v "d:\_results":"c:\app\results" --name ext-bench-legacy extnet-benchmark-legacy</b>
             </li>
             <li>
                 Remove the container: <b>docker rm -f ext-bench-legacy</b>
